samples/_failures_safe/1761533046_024125_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8359751d.c: In function ‘main’:
./samples/SAFE/__tmp_8359751d.c:167:13: error: expected expression at end of input
  167 |             for (size_t i =
      |             ^~~
./samples/SAFE/__tmp_8359751d.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8359751d.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8359751d.c:167:13: error: expected declaration or statement at end of input
